# sheetforge-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TOOLS.md  excel-mcp-server-0.1.8.mcpb  manifest.json  pyproject.toml  sheetforge-mcp-0.2.1.mcpb  sheetforge-mcp-0.3.0.mcpb  sheetforge-mcp-0.4.2.mcpb  sheetforge-mcp-0.6.0.mcpb  sheetforge-mcp-0.7.0.mcpb
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml  release-build.yml
docs/: index.html
docs/roadmaps/: 2026-04-08-sheetforge-roadmap.md
src/excel_mcp/: __main__.py  calculations.py  chart.py  data.py  exceptions.py  formatting.py  pivot.py  query.py  server.py  sheet.py  tables.py  validation.py  workbook.py
tests/: conftest.py  test_chart.py  test_cli.py  test_complex_workbook.py  test_data.py  test_formatting.py  test_layout.py  test_manifest.py  test_query.py  test_release_artifacts.py  test_resource_safety.py  test_tables.py  test_workbook.py
