[project]
name = "sheetforge-mcp"
version = "0.6.0"
description = "Excel MCP server for AI agents, spreadsheet automation, workbook inspection, and .xlsx reporting with Model Context Protocol and openpyxl"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "model-context-protocol", "excel", "xlsx", "spreadsheet", "openpyxl", "automation", "ai-agents", "reporting", "dashboard", "workbook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.10.1",
    "fastmcp>=2.0.0,<3.0.0",
    "openpyxl>=3.1.5",
    "typer>=0.16.0"
]
[[project.authors]]
name = "SheetForge"

[project.urls]
Homepage = "https://github.com/iHeldan/sheetforge-mcp"
Repository = "https://github.com/iHeldan/sheetforge-mcp"
Documentation = "https://github.com/iHeldan/sheetforge-mcp#readme"
Issues = "https://github.com/iHeldan/sheetforge-mcp/issues"

[project.scripts]
sheetforge-mcp = "excel_mcp.__main__:app"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/excel_mcp"]

[tool.hatch.build]
packages = ["src/excel_mcp"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
